--- a/frontend-ems/src/app/add-employee/add-employee.component.html
+++ b/frontend-ems/src/app/add-employee/add-employee.component.html
@@ -127,12 +127,7 @@
                             <input type="text" id="dob" class="form-control" [(ngModel)]="newEmployee.dob" name="dob" required>
                         </div>
                     </div>
-                    <!-- <div class="form-group">
-                        <label for="createdBy">Created By:</label>
-                        <input type="number" id="createdBy" class="form-control" [(ngModel)]="newEmployee.createdBy"
-                            name="createdBy" required>
-                    </div> -->
-                    <div class="submit" style="justify-content: center; text-align: center;">
+                    <div class="submit" style="justify-content: center; text-align: center;" *ngIf="showButton()">
                         <button type="submit" class="btn btn-outline-primary" [disabled]="!f.valid">Add Employee</button>
                     </div>
                     
